# ProgII-Portfolio

./: README.md
Prog II Portfolio/: Asset Quellen.txt  Code recherche.txt  Portfolio Prog II.docx  Quellen.txt  ~$rtfolio Prog II.docx  ~WRL2701.tmp
Prog II Portfolio/Aufgabe 7/: State Pattern Notizen.docx  State Pattern Präsentation.pptx
Prog II Portfolio/Aufgabe 7/State Pattern Codebeispiel/src/: CMakeLists.txt  main.cpp
Prog II Portfolio/Aufgaben 1-5 KAPUTT/Gimp Files/: Unbenannt.xcf
Prog II Portfolio/Aufgaben 1-5 KAPUTT/src/: CMakeLists.txt  Enums.h  main.cpp
Prog II Portfolio/Aufgaben 1-5 KAPUTT/src/Characters/: Char.cpp  Char.h  Player.cpp  Player.h
Prog II Portfolio/Aufgaben 1-5 KAPUTT/src/Items/: ItemBase.cpp  ItemBase.h
Prog II Portfolio/Aufgaben 1-5 KAPUTT/src/Systems/: Inventory.cpp  Inventory.h  MapManager.cpp  MapManager.h
Prog II Portfolio/Aufgaben 1-5 KAPUTT/src/Tiles/: Tile.cpp  Tile.h  TileBlocked.cpp  TileBlocked.h  TileChest.cpp  TileChest.h  TileExit.cpp  TileExit.h  TileStart.cpp  TileStart.h  TileTraversable.cpp  TileTraversable.h
Prog II Portfolio/Aufgaben 1-5/raylibstarter-minimal-main/src/: CMakeLists.txt  Enums.h  config.h.in  main.cpp
Prog II Portfolio/Aufgaben 1-5/raylibstarter-minimal-main/src/Characters/: Char.cpp  Char.h  Npc.cpp  Npc.h  Player.cpp  Player.h
Prog II Portfolio/Aufgaben 1-5/raylibstarter-minimal-main/src/Items/: Axe.cpp  Axe.h  BoneNecklace.cpp  BoneNecklace.h  Flamberge.cpp  Flamberge.h  ItemBase.cpp  ItemBase.h  Mace.cpp  Mace.h  Necklace.cpp  Necklace.h  PlainNecklace.cpp  PlainNecklace.h  Ring.cpp  Ring.h  RingMajor.cpp  RingMajor.h  RingMinor.cpp  RingMinor.h  Spear.cpp  Spear.h  Sword.cpp  Sword.h  Warhammer.cpp  Warhammer.h  Weapon.cpp  Weapon.h
Prog II Portfolio/Aufgaben 1-5/raylibstarter-minimal-main/src/Systems/: Inventory.h  MapManager.cpp  MapManager.h
Prog II Portfolio/Aufgaben 1-5/raylibstarter-minimal-main/src/Tiles/: Tile.cpp  Tile.h  TileBlocked.cpp  TileBlocked.h  TileChest.cpp  TileChest.h  TileExit.cpp  TileExit.h  TilePath.cpp  TilePath.h  TileStart.cpp  TileStart.h  TileTraversable.cpp  TileTraversable.h
(+13 files in other folders)
